--- a/index.html
+++ b/index.html
@@ -5,72 +5,125 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub 网盘</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
     <style>
-        body { padding: 20px; max-width: 800px; margin: auto; }
-        .file-list { list-style: none; padding: 0; }
+        body { padding: 20px; max-width: 900px; margin: auto; background: #f8f9fa; }
         .file-list li { padding: 10px; border-bottom: 1px solid #ddd; display: flex; align-items: center; }
-        .file-list i { margin-right: 10px; }
-        .back-btn { display: none; }
+        .file-list li:last-child { border-bottom: none; }
+        .file-list i { margin-right: 10px; font-size: 1.2rem; }
+        .breadcrumb-item a { text-decoration: none; color: #0d6efd; }
+        .breadcrumb-item.active { color: #6c757d; }
     </style>
 </head>
 <body>
 
-    <h2 class="text-center">📂 我的 GitHub 网盘</h2>
-    <button class="btn btn-secondary back-btn" onclick="goBack()">⬅ 返回上一级</button>
-    <ul class="file-list" id="file-list">正在加载文件...</ul>
+    <div class="container">
+        <h2 class="text-center my-4">📂 我的 GitHub 网盘</h2>
+        <!-- 面包屑导航显示当前路径 -->
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb" id="breadcrumb">
+                <li class="breadcrumb-item active">根目录</li>
+            </ol>
+        </nav>
+        <!-- 文件列表卡片 -->
+        <div class="card">
+            <div class="card-body">
+                <ul class="list-unstyled mb-0" id="file-list">正在加载文件...</ul>
+            </div>
+        </div>
+    </div>
 
     <script>
-        const repo = "qmwneb946/pan"; // 修改为你的仓库
+        const repo = "qmwneb946/pan"; // 修改为你的仓库名
         const branch = "main"; // 仓库分支
-        let currentPath = "files"; // 初始目录
+        let currentPath = "files"; // 初始目录（根目录）
+        let cache = {}; // 用于缓存 API 返回的数据
 
         async function fetchFiles(path) {
+            updateBreadcrumb(path);
+            if (cache[path]) {
+                renderFiles(cache[path], path);
+                return;
+            }
             const url = `https://api.github.com/repos/${repo}/contents/${path}?ref=${branch}`;
             try {
                 let response = await fetch(url);
                 let files = await response.json();
-
-                let list = document.getElementById("file-list");
-                list.innerHTML = ""; // 清空内容
-
-                // 如果当前目录不是根目录，显示返回按钮
-                if (path !== "files") {
-                    document.querySelector(".back-btn").style.display = "block";
-                } else {
-                    document.querySelector(".back-btn").style.display = "none";
-                }
-
-                files.forEach(file => {
-                    let li = document.createElement("li");
-                    let link = document.createElement("a");
-                    link.style = "text-decoration: none; color: black;";
-                    
-                    if (file.type === "dir") {
-                        // 进入文件夹
-                        link.href = "#";
-                        link.onclick = () => { currentPath = file.path; fetchFiles(file.path); };
-                        link.innerHTML = `<i class="fas fa-folder text-warning"></i> ${file.name}`;
-                    } else {
-                        // 下载文件
-                        link.href = file.download_url;
-                        link.target = "_blank";
-                        let sizeKB = (file.size / 1024).toFixed(1);
-                        link.innerHTML = `<i class="fas fa-file text-primary"></i> ${file.name} <span class="text-muted">(${sizeKB} KB)</span>`;
-                    }
-
-                    li.appendChild(link);
-                    list.appendChild(li);
-                });
+                cache[path] = files;
+                renderFiles(files, path);
             } catch (error) {
                 document.getElementById("file-list").innerText = "无法加载文件列表";
             }
         }
 
-        function goBack() {
-            let parts = currentPath.split("/");
-            parts.pop();
-            currentPath = parts.length > 1 ? parts.join("/") : "files";
+        function renderFiles(files, path) {
+            let list = document.getElementById("file-list");
+            list.innerHTML = "";
+            files.forEach(file => {
+                let li = document.createElement("li");
+                let link = document.createElement("a");
+                link.style = "text-decoration: none; color: inherit; flex-grow: 1;";
+                if (file.type === "dir") {
+                    // 文件夹，点击后进入子目录
+                    link.href = "#";
+                    link.onclick = (e) => {
+                        e.preventDefault();
+                        currentPath = file.path;
+                        fetchFiles(file.path);
+                    };
+                    link.innerHTML = `<i class="fas fa-folder text-warning"></i> ${file.name}`;
+                } else {
+                    // 文件，点击后下载
+                    link.href = file.download_url;
+                    link.target = "_blank";
+                    let sizeKB = (file.size / 1024).toFixed(1);
+                    link.innerHTML = `<i class="fas fa-file-alt text-primary"></i> ${file.name} <span class="text-muted">(${sizeKB} KB)</span>`;
+                }
+                li.appendChild(link);
+                list.appendChild(li);
+            });
+        }
+
+        // 更新面包屑导航，显示当前路径
+        function updateBreadcrumb(path) {
+            const breadcrumb = document.getElementById("breadcrumb");
+            breadcrumb.innerHTML = "";
+            const parts = path.split("/");
+            let accumulatedPath = "";
+            // 根目录
+            const rootItem = document.createElement("li");
+            rootItem.className = "breadcrumb-item";
+            if (parts[0] === "files") {
+                rootItem.innerHTML = `<a href="#" onclick="navigateToRoot(event)">根目录</a>`;
+            } else {
+                rootItem.textContent = "根目录";
+            }
+            breadcrumb.appendChild(rootItem);
+            // 遍历各级目录
+            parts.forEach((part, index) => {
+                accumulatedPath += (index === 0 ? part : "/" + part);
+                const li = document.createElement("li");
+                li.className = "breadcrumb-item";
+                if (index === parts.length - 1) {
+                    li.classList.add("active");
+                    li.setAttribute("aria-current", "page");
+                    li.textContent = part;
+                } else {
+                    li.innerHTML = `<a href="#" onclick="navigateBreadcrumb(event, '${accumulatedPath}')">${part}</a>`;
+                }
+                breadcrumb.appendChild(li);
+            });
+        }
+
+        function navigateBreadcrumb(e, path) {
+            e.preventDefault();
+            currentPath = path;
+            fetchFiles(path);
+        }
+
+        function navigateToRoot(e) {
+            e.preventDefault();
+            currentPath = "files";
             fetchFiles(currentPath);
         }
 
