--- a/index.html
+++ b/index.html
@@ -1,134 +1,262 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub 网盘</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
-    <style>
-        body { padding: 20px; max-width: 900px; margin: auto; background: #f8f9fa; }
-        .file-list li { padding: 10px; border-bottom: 1px solid #ddd; display: flex; align-items: center; }
-        .file-list li:last-child { border-bottom: none; }
-        .file-list i { margin-right: 10px; font-size: 1.2rem; }
-        .breadcrumb-item a { text-decoration: none; color: #0d6efd; }
-        .breadcrumb-item.active { color: #6c757d; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GitHub 网盘</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.33.0/min/vs/loader.js"></script>
+  <style>
+    body {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+      background: #f8f9fa;
+    }
+    .file-list li {
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+      display: flex;
+      align-items: center;
+    }
+    .file-list li:last-child {
+      border-bottom: none;
+    }
+    .file-list i {
+      margin-right: 10px;
+      font-size: 1.2rem;
+    }
+    .breadcrumb-item a {
+      text-decoration: none;
+      color: #0d6efd;
+    }
+    .breadcrumb-item.active {
+      color: #6c757d;
+    }
+  </style>
 </head>
 <body>
-
-    <div class="container">
-        <h2 class="text-center my-4">📂 我的 GitHub 网盘</h2>
-        <!-- 面包屑导航显示当前路径 -->
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb" id="breadcrumb">
-                <li class="breadcrumb-item active">根目录</li>
-            </ol>
-        </nav>
-        <!-- 文件列表卡片 -->
-        <div class="card">
-            <div class="card-body">
-                <ul class="list-unstyled mb-0" id="file-list">正在加载文件...</ul>
-            </div>
-        </div>
+  <div class="container">
+    <h2 class="text-center my-4">📂 我的 GitHub 网盘</h2>
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb" id="breadcrumb">
+        <li class="breadcrumb-item active">根目录</li>
+      </ol>
+    </nav>
+    <div class="card">
+      <div class="card-body">
+        <ul class="list-unstyled mb-0" id="file-list">正在加载文件...</ul>
+      </div>
     </div>
+  </div>
 
-    <script>
-        const repo = "qmwneb946/pan"; // 修改为你的仓库名
-        const branch = "main"; // 仓库分支
-        let currentPath = "files"; // 初始目录（根目录）
-        let cache = {}; // 用于缓存 API 返回的数据
+  <div class="modal fade" id="previewModal" tabindex="-1" aria-labelledby="previewModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="previewModalLabel">预览: <span id="previewFilename"></span></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="关闭"></button>
+        </div>
+        <div class="modal-body">
+          <div id="monaco-container" style="width:100%;height:80vh;border:1px solid #ddd;"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-        async function fetchFiles(path) {
-            updateBreadcrumb(path);
-            if (cache[path]) {
-                renderFiles(cache[path], path);
-                return;
-            }
-            const url = `https://api.github.com/repos/${repo}/contents/${path}?ref=${branch}`;
-            try {
-                let response = await fetch(url);
-                let files = await response.json();
-                cache[path] = files;
-                renderFiles(files, path);
-            } catch (error) {
-                document.getElementById("file-list").innerText = "无法加载文件列表";
-            }
+  <script>
+    const repo = "qmwneb946/pan"; // 替换为你的仓库
+    const branch = "main"; // 仓库分支
+    let currentPath = "files"; // 初始目录
+    let cache = {}; // 缓存 API 数据
+    let editor = null; // Monaco 编辑器实例
+
+    const previewExtensions = ["txt", "cpp", "c", "h", "py", "js", "json", "html", "css", "md", "java", "go", "rs"];
+
+    // 获取文件列表
+    async function fetchFiles(path) {
+      console.log(`Fetching files from path: ${path}`); // 调试信息
+      updateBreadcrumb(path);
+      if (cache[path]) {
+        renderFiles(cache[path], path);
+        return;
+      }
+      const url = `https://api.github.com/repos/${repo}/contents/${path}?ref=${branch}`;
+      try {
+        let response = await fetch(url);
+        if (!response.ok) {
+          throw new Error(`Failed to fetch files: ${response.statusText}`);
         }
+        let files = await response.json();
+        console.log('Files fetched:', files); // 调试信息
+        cache[path] = files;
+        renderFiles(files, path);
+      } catch (error) {
+        console.error('Error fetching files:', error);
+        document.getElementById("file-list").innerText = "无法加载文件列表";
+      }
+    }
 
-        function renderFiles(files, path) {
-            let list = document.getElementById("file-list");
-            list.innerHTML = "";
-            files.forEach(file => {
-                let li = document.createElement("li");
-                let link = document.createElement("a");
-                link.style = "text-decoration: none; color: inherit; flex-grow: 1;";
-                if (file.type === "dir") {
-                    // 文件夹，点击后进入子目录
-                    link.href = "#";
-                    link.onclick = (e) => {
-                        e.preventDefault();
-                        currentPath = file.path;
-                        fetchFiles(file.path);
-                    };
-                    link.innerHTML = `<i class="fas fa-folder text-warning"></i> ${file.name}`;
-                } else {
-                    // 文件，点击后下载
-                    link.href = file.download_url;
-                    link.target = "_blank";
-                    let sizeKB = (file.size / 1024).toFixed(1);
-                    link.innerHTML = `<i class="fas fa-file-alt text-primary"></i> ${file.name} <span class="text-muted">(${sizeKB} KB)</span>`;
-                }
-                li.appendChild(link);
-                list.appendChild(li);
-            });
-        }
-
-        // 更新面包屑导航，显示当前路径
-        function updateBreadcrumb(path) {
-            const breadcrumb = document.getElementById("breadcrumb");
-            breadcrumb.innerHTML = "";
-            const parts = path.split("/");
-            let accumulatedPath = "";
-            // 根目录
-            const rootItem = document.createElement("li");
-            rootItem.className = "breadcrumb-item";
-            if (parts[0] === "files") {
-                rootItem.innerHTML = `<a href="#" onclick="navigateToRoot(event)">根目录</a>`;
-            } else {
-                rootItem.textContent = "根目录";
-            }
-            breadcrumb.appendChild(rootItem);
-            // 遍历各级目录
-            parts.forEach((part, index) => {
-                accumulatedPath += (index === 0 ? part : "/" + part);
-                const li = document.createElement("li");
-                li.className = "breadcrumb-item";
-                if (index === parts.length - 1) {
-                    li.classList.add("active");
-                    li.setAttribute("aria-current", "page");
-                    li.textContent = part;
-                } else {
-                    li.innerHTML = `<a href="#" onclick="navigateBreadcrumb(event, '${accumulatedPath}')">${part}</a>`;
-                }
-                breadcrumb.appendChild(li);
-            });
-        }
-
-        function navigateBreadcrumb(e, path) {
+    // 渲染文件列表
+    function renderFiles(files, path) {
+      let list = document.getElementById("file-list");
+      list.innerHTML = "";
+      files.forEach(file => {
+        let li = document.createElement("li");
+        let link = document.createElement("a");
+        link.style = "text-decoration: none; color: inherit; flex-grow: 1;";
+        if (file.type === "dir") {
+          link.href = "#";
+          link.onclick = (e) => {
             e.preventDefault();
-            currentPath = path;
-            fetchFiles(path);
+            currentPath = file.path;
+            fetchFiles(file.path);
+          };
+          link.innerHTML = `<i class="fas fa-folder text-warning"></i> ${file.name}`;
+        } else {
+          let ext = file.name.split('.').pop().toLowerCase();
+          if (previewExtensions.includes(ext)) {
+            link.href = "#";
+            link.onclick = (e) => {
+              e.preventDefault();
+              previewFile(file);
+            };
+            let sizeKB = (file.size / 1024).toFixed(1);
+            link.innerHTML = `<i class="fas fa-file-alt text-primary"></i> ${file.name} <span class="text-muted">(${sizeKB} KB)</span>`;
+          } else {
+            link.href = file.download_url;
+            link.target = "_blank";
+            let sizeKB = (file.size / 1024).toFixed(1);
+            link.innerHTML = `<i class="fas fa-file text-secondary"></i> ${file.name} <span class="text-muted">(${sizeKB} KB)</span>`;
+          }
         }
+        li.appendChild(link);
+        list.appendChild(li);
+      });
+    }
 
-        function navigateToRoot(e) {
-            e.preventDefault();
-            currentPath = "files";
-            fetchFiles(currentPath);
+    // 更新面包屑导航显示当前路径
+    function updateBreadcrumb(path) {
+      const breadcrumb = document.getElementById("breadcrumb");
+      breadcrumb.innerHTML = "";
+      const parts = path.split("/");
+      let accumulatedPath = "";
+      const rootItem = document.createElement("li");
+      rootItem.className = "breadcrumb-item";
+      if (parts[0] === "files") {
+        rootItem.innerHTML = `<a href="#" onclick="navigateToRoot(event)">根目录</a>`;
+      } else {
+        rootItem.textContent = "根目录";
+      }
+      breadcrumb.appendChild(rootItem);
+
+      parts.forEach((part, index) => {
+        accumulatedPath += (index === 0 ? part : "/" + part);
+        const li = document.createElement("li");
+        li.className = "breadcrumb-item";
+        if (index === parts.length - 1) {
+          li.classList.add("active");
+          li.setAttribute("aria-current", "page");
+          li.textContent = part;
+        } else {
+          li.innerHTML = `<a href="#" onclick="navigateBreadcrumb(event, '${accumulatedPath}')">${part}</a>`;
         }
+        breadcrumb.appendChild(li);
+      });
+    }
 
-        fetchFiles(currentPath);
-    </script>
+    function navigateBreadcrumb(e, path) {
+      e.preventDefault();
+      currentPath = path;
+      fetchFiles(path);
+    }
 
+    function navigateToRoot(e) {
+      e.preventDefault();
+      currentPath = "files";
+      fetchFiles(currentPath);
+    }
+
+    // 预览文件内容
+    async function previewFile(file) {
+      console.log(`Previewing file: ${file.name}`); // 调试信息
+      document.getElementById("previewFilename").textContent = file.name;
+      const container = document.getElementById("monaco-container");
+      container.innerHTML = "加载中...";
+      try {
+        let response = await fetch(file.download_url);
+        if (!response.ok) {
+          throw new Error(`Failed to load file: ${response.statusText}`);
+        }
+        let content = await response.text();
+        let language = getLanguageFromFileName(file.name);
+        let modalEl = document.getElementById('previewModal');
+        let modal = new bootstrap.Modal(modalEl);
+        modal.show();
+        setTimeout(() => {
+          loadMonacoEditor(content, language);
+        }, 300);
+      } catch (error) {
+        console.error('Error loading file content:', error);
+        container.innerText = "无法加载文件内容";
+      }
+    }
+
+    function getLanguageFromFileName(filename) {
+      const ext = filename.split('.').pop().toLowerCase();
+      switch(ext) {
+        case "cpp":
+        case "c":
+        case "h":
+          return "cpp";
+        case "py":
+          return "python";
+        case "js":
+          return "javascript";
+        case "json":
+          return "json";
+        case "html":
+          return "html";
+        case "css":
+          return "css";
+        case "md":
+          return "markdown";
+        case "java":
+          return "java";
+        case "go":
+          return "go";
+        case "rs":
+          return "rust";
+        case "txt":
+        default:
+          return "plaintext";
+      }
+    }
+
+    function loadMonacoEditor(content, language) {
+      console.log("Loading Monaco editor..."); // 调试信息
+      if (editor) {
+        editor.dispose();
+      }
+      const container = document.getElementById("monaco-container");
+      container.innerHTML = "";
+      require.config({ paths: { 'vs': 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.33.0/min/vs' }});
+      require(["vs/editor/editor.main"], function () {
+        editor = monaco.editor.create(container, {
+          value: content,
+          language: language,
+          theme: "vs-light",
+          automaticLayout: true,
+          readOnly: true,
+          minimap: { enabled: false }
+        });
+        console.log("Monaco editor loaded successfully!"); // 调试信息
+      });
+    }
+
+    fetchFiles(currentPath);
+  </script>
 </body>
 </html>
