--- a/index.html
+++ b/index.html
@@ -44,12 +44,16 @@
       padding: 4px 8px;
       border-radius: 4px;
       cursor: pointer;
-      margin-left: auto; /* 确保下载按钮右对齐 */
+      margin-left: auto;
     }
     .file-info {
       display: flex;
       align-items: center;
       flex-grow: 1;
+    }
+    .file-preview img, .file-preview video, .file-preview audio {
+      max-width: 100%;
+      max-height: 400px;
     }
   </style>
 </head>
@@ -82,19 +86,24 @@
         </div>
         <div class="modal-body">
           <div id="monaco-container" style="width:100%;height:80vh;border:1px solid #ddd;"></div>
+          <div id="media-container" class="file-preview"></div>
         </div>
       </div>
     </div>
   </div>
 
   <script>
-    const repo = "qmwneb946/pan"; // 替换为你的仓库
-    const branch = "main"; // 仓库分支
-    let currentPath = "files"; // 初始目录
-    let cache = {}; // 缓存 API 数据
-    let editor = null; // Monaco 编辑器实例
+    const repo = "qmwneb946/pan"; // GitHub repo
+    const branch = "main"; // Branch
+    let currentPath = "files"; // Default folder
+    let cache = {}; // Cache for file data
+    let editor = null; // Monaco editor instance
 
+    // Define file extensions for preview
     const previewExtensions = ["txt", "cpp", "c", "h", "py", "js", "json", "html", "css", "md", "java", "go", "rs", "csv", "mp4"];
+    const imageExtensions = ["jpg", "jpeg", "png", "gif", "bmp"];
+    const videoExtensions = ["mp4", "webm", "ogg"];
+    const audioExtensions = ["mp3", "wav", "ogg"];
 
     async function fetchFiles(path) {
       console.log(`Fetching files from path: ${path}`);
@@ -122,6 +131,14 @@
     function renderFiles(files, path) {
       let list = document.getElementById("file-list");
       list.innerHTML = "";
+
+      files.sort((a, b) => {
+        if (a.type === b.type) {
+          return a.name.localeCompare(b.name);
+        }
+        return a.type === 'dir' ? -1 : 1;
+      });
+
       files.forEach(file => {
         let li = document.createElement("li");
         let fileInfo = document.createElement("div");
@@ -140,7 +157,7 @@
         } else {
           let ext = file.name.split('.').pop().toLowerCase();
           let size = formatFileSize(file.size);
-          let modifiedDate = file.last_modified ? new Date(file.last_modified).toLocaleDateString() : "未知";
+          let modifiedDate = file.commit ? new Date(file.commit.committer.date).toLocaleDateString() : "未知";
           if (previewExtensions.includes(ext)) {
             link.href = "#";
             link.onclick = (e) => {
@@ -158,7 +175,6 @@
         fileInfo.appendChild(link);
         li.appendChild(fileInfo);
 
-        // 仅对文件添加下载按钮，对文件夹不添加
         if (file.type !== "dir") {
           let downloadButton = document.createElement("a");
           downloadButton.href = `https://pan.qmwneb946.us.kg/${file.path}`;
@@ -179,11 +195,7 @@
       let accumulatedPath = "";
       const rootItem = document.createElement("li");
       rootItem.className = "breadcrumb-item";
-      if (parts[0] === "files") {
-        rootItem.innerHTML = `<a href="#" onclick="navigateToRoot(event)">根目录</a>`;
-      } else {
-        rootItem.textContent = "根目录";
-      }
+      rootItem.innerHTML = `<a href="#" onclick="navigateToRoot(event)">根目录</a>`;
       breadcrumb.appendChild(rootItem);
 
       parts.forEach((part, index) => {
@@ -217,20 +229,30 @@
       console.log(`Previewing file: ${file.name}`);
       document.getElementById("previewFilename").textContent = file.name;
       const container = document.getElementById("monaco-container");
+      const mediaContainer = document.getElementById("media-container");
       container.innerHTML = "加载中...";
+      mediaContainer.innerHTML = "";
       try {
         let response = await fetch(file.download_url.replace("github.com", "pan.qmwneb946.us.kg"));
         if (!response.ok) {
           throw new Error(`Failed to load file: ${response.statusText}`);
         }
         let content = await response.text();
+        let ext = file.name.split('.').pop().toLowerCase();
         let language = getLanguageFromFileName(file.name);
         let modalEl = document.getElementById('previewModal');
         let modal = new bootstrap.Modal(modalEl);
         modal.show();
-        setTimeout(() => {
+
+        if (imageExtensions.includes(ext)) {
+          mediaContainer.innerHTML = `<img src="${file.download_url}" class="img-fluid" alt="${file.name}">`;
+        } else if (videoExtensions.includes(ext)) {
+          mediaContainer.innerHTML = `<video controls class="w-100"><source src="${file.download_url}" type="video/${ext}"></video>`;
+        } else if (audioExtensions.includes(ext)) {
+          mediaContainer.innerHTML = `<audio controls class="w-100"><source src="${file.download_url}" type="audio/${ext}"></audio>`;
+        } else {
           loadMonacoEditor(content, language);
-        }, 300);
+        }
       } catch (error) {
         console.error('Error loading file content:', error);
         container.innerText = "无法加载文件内容";
@@ -264,9 +286,6 @@
           return "rust";
         case "csv":
           return "csv";
-        case "mp4":
-          return "plaintext"; // MP4 can be previewed as plaintext for simplicity
-        case "txt":
         default:
           return "plaintext";
       }
